# showroombaby-Backend

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
.github/workflows/: rust.yml
backend/: .env
migrations/2024-10-02-091031_create_offers/: down.sql
migrations/2024-10-02-091031_create_users/: up.sql
migrations/2024-10-02-091554_insert_fake_offers/: down.sql  up.sql
migrations/2024-10-02-091926_create_offers_table/: down.sql  up.sql
migrations/2024-10-03-140216_add_category_to_offers/: down.sql  up.sql
src/: aws_config.rs  db.rs  dynamodb_service.rs  jwt.rs  main.rs  s3_service.rs  schema.rs
src/models/: offer.rs  user.rs
src/routes/: messaging.rs  offers.rs  s3_routes.rs  search.rs
src/services/: dynamodb_service.rs  search_service.rs
src/utils/: error.rs
tests/: integration_test.rs  search_test.rs
