[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.16"
tokio-tungstenite = "0.16"
diesel = { version = "2.0", features = ["mysql", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5.0"
actix-cors = "0.6.0"
utoipa = "1.0"
jsonwebtoken = "8"
env_logger = "0.10"
